[package]
name = "dns-syncer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
clap = { version = "4.4.4", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tabled = "0.14.0"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
